--- a/style/css/reset.css
+++ b/style/css/reset.css
@@ -41,3 +41,10 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+input, input:before, input:after {
+      -webkit-user-select: initial;
+      -khtml-user-select: initial;
+      -moz-user-select: initial;
+      -ms-user-select: initial;
+      user-select: initial;
+     } 
