--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -252,6 +252,7 @@ Adaptable
     height: max-content;
     width: max-content;
     align-items: center;
+    background: #232323;
 
     .contacts-container {
       margin-right: 40px;
