--- a/style/scss/_header.scss
+++ b/style/scss/_header.scss
@@ -36,7 +36,7 @@ header {
         width: 455px;
         margin: 0 15px 0 0;
 
-        .current {
+         .activeNav {
           font-family: $latoBold;
         }
 
