--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -52,10 +52,11 @@ body {
   justify-content: center;
   align-items: center;
   font-family: $latoRegular;
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 .container {
+  width: 100%;
   max-width: 1140px;
   padding: 0;
 }
