--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Beyno';
-  src: url('../../fonts/beyno/BEYNO.otf') format('opentype'),
-  url('../../fonts/beyno/BEYNO.ttf') format('ttf');
+  src: url('../../fonts/beyno/BEYNO.woff') format('woff'),
+  url('../../fonts/beyno/BEYNO.otf') format('opentype');
 }
 
 
